--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
