--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.17",
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "clsx": "^1.2.1",
     "firebase": "^9.22.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
